Online_Compiler/code_compile_run/c++11/error.txt
./code_compile_run/c++11/main.cpp:1:1: error: 'import' does not name a type; did you mean 'short'?
 import java.util.Scanner;
 ^~~~~~
 short
./code_compile_run/c++11/main.cpp:3:1: error: expected unqualified-id before 'public'
 public class Testing {
 ^~~~~~
